--- a/index.html
+++ b/index.html
@@ -425,27 +425,42 @@
         <nav class="footer__nav">
           <ul class="footer__link">
             <li class="footer__link-item">
-              <a href="https://yandex.ru/maps" class="footer__link-href"
+              <a
+                href="https://yandex.ru/maps"
+                class="footer__link-href"
+                target="_blank"
                 >Карты</a
               >
             </li>
             <li class="footer__link-item">
-              <a href="https://yandex.ru/pogoda" class="footer__link-href"
+              <a
+                href="https://yandex.ru/pogoda"
+                class="footer__link-href"
+                target="_blank"
                 >Погода</a
               >
             </li>
             <li class="footer__link-item">
-              <a href="https://rasp.yandex.ru" class="footer__link-href"
+              <a
+                href="https://rasp.yandex.ru"
+                class="footer__link-href"
+                target="_blank"
                 >Расписание</a
               >
             </li>
             <li class="footer__link-item">
-              <a href="https://calendar.yandex.ru" class="footer__link-href"
+              <a
+                href="https://calendar.yandex.ru"
+                class="footer__link-href"
+                target="_blank"
                 >Календарь</a
               >
             </li>
             <li class="footer__link-item">
-              <a href="https://travel.yandex.ru" class="footer__link-href"
+              <a
+                href="https://travel.yandex.ru"
+                class="footer__link-href"
+                target="_blank"
                 >Путешествия</a
               >
             </li>
